Avance 1/misterParser.py
# Generated from java-escape by ANTLR 4.5
# encoding: utf-8
from antlr4 import *
from io import StringIO
package = globals().get("__package__", None)
ischild = len(package)>0 if package is not None else False
if ischild:
    from .misterListener import misterListener
else:
    from misterListener import misterListener


class misterParser ( Parser ):

    grammarFileName = "java-escape"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"'INICIO'", u"'SI'", u"'SINO'", u"'MIENTRAS'", u"'LEER'", 
                     u"'IMPRIMIR'", u"'FUNCION'", u"'ENTERO'", u"'DECIMAL'", 
                     u"'TEXTO'", u"'RETORNAR'", u"'LISTA'", u"'CLASE'", 
                     u"'ATRIBUTOS'", u"'METODOS'", u"'HEREDA'", u"'NADA'", 
                     u"'PRIVADO'", u"'PUBLICO'", u"'&&'", u"'&'", u"'||'", 
                     u"'=='", u"'='", u"','", u"'+'", u"'-'", u"'/'", u"'*'", 
                     u"'!='", u"'>='", u"'<='", u"'<'", u"'>'", u"'('", 
                     u"')'", u"'{'", u"'}'", u"'['", u"']'", u"';'", u"':'", 
                     u"'.'" ]

    symbolicNames = [ u"<INVALID>", u"CTENTERO", u"CTEDECIMAL", u"CTETEXTO", 
                      u"INICIO", u"SI", u"SINO", u"MIENTRAS", u"LEER", u"IMPRIMIR", 
                      u"FUNCION", u"ENTERO", u"DECIMAL", u"TEXTO", u"RETORNAR", 
                      u"LISTA", u"CLASE", u"ATRIBUTOS", u"METODOS", u"HEREDA", 
                      u"NADA", u"PRIVADO", u"PUBLICO", u"Y", u"REFERENCIA", 
                      u"O", u"IDENTICO", u"IGUAL", u"COMA", u"SUMA", u"RESTA", 
                      u"DIVISION", u"MULTIPLICACION", u"DIFERENTE", u"MAYORIGUAL", 
                      u"MENORIGUAL", u"MENOR", u"MAYOR", u"PARENTESIS1", 
                      u"PARENTESIS2", u"LLAVE1", u"LLAVE2", u"CORCHETE1", 
                      u"CORCHETE2", u"PUNTOYCOMA", u"DOSPUNTOS", u"PUNTO", 
                      u"ID", u"WS" ]

    RULE_programa = 0
    RULE_programaAux1 = 1
    RULE_programaAux3 = 2
    RULE_programaAux4 = 3
    RULE_v_vars = 4
    RULE_varsAux1 = 5
    RULE_varsAux2 = 6
    RULE_varsAux3 = 7
    RULE_varsAux4 = 8
    RULE_varsAux5 = 9
    RULE_tipo = 10
    RULE_l_list = 11
    RULE_cteL = 12
    RULE_cteLAux1 = 13
    RULE_valor = 14
    RULE_parametros = 15
    RULE_parametrosAux1 = 16
    RULE_parametrosAux2 = 17
    RULE_parametrosAux3 = 18
    RULE_func = 19
    RULE_funcAux1 = 20
    RULE_funcAux2 = 21
    RULE_funcAux3 = 22
    RULE_expresion = 23
    RULE_expresionAux1 = 24
    RULE_expresionAux2 = 25
    RULE_estatuto = 26
    RULE_declaracion = 27
    RULE_declaracionAux1 = 28
    RULE_declaracionAux2 = 29
    RULE_exp = 30
    RULE_expAux1 = 31
    RULE_llamarFunc = 32
    RULE_llamarFuncAux1 = 33
    RULE_llamarFuncAux2 = 34
    RULE_llamarFuncAux3 = 35
    RULE_termino = 36
    RULE_terminoAux1 = 37
    RULE_factor = 38
    RULE_factorAux1 = 39
    RULE_compuesto = 40
    RULE_compuestoAux1 = 41
    RULE_compuestoAux2 = 42
    RULE_asignacion = 43
    RULE_asignacionAux1 = 44
    RULE_condicion = 45
    RULE_condicionAux1 = 46
    RULE_bloque = 47
    RULE_bloqueAux1 = 48
    RULE_ciclo = 49
    RULE_escritura = 50
    RULE_escrituraAux1 = 51
    RULE_lectura = 52
    RULE_c_class = 53
    RULE_classAux1 = 54
    RULE_classAux2 = 55
    RULE_classAux3 = 56
    RULE_atrib = 57
    RULE_atribAux1 = 58
    RULE_atribAux2 = 59
    RULE_atribAux3 = 60
    RULE_metod = 61
    RULE_metodAux1 = 62
    RULE_metodAux2 = 63
    RULE_metodAux3 = 64

    ruleNames =  [ "programa", "programaAux1", "programaAux3", "programaAux4", 
                   "v_vars", "varsAux1", "varsAux2", "varsAux3", "varsAux4", 
                   "varsAux5", "tipo", "l_list", "cteL", "cteLAux1", "valor", 
                   "parametros", "parametrosAux1", "parametrosAux2", "parametrosAux3", 
                   "func", "funcAux1", "funcAux2", "funcAux3", "expresion", 
                   "expresionAux1", "expresionAux2", "estatuto", "declaracion", 
                   "declaracionAux1", "declaracionAux2", "exp", "expAux1", 
                   "llamarFunc", "llamarFuncAux1", "llamarFuncAux2", "llamarFuncAux3", 
                   "termino", "terminoAux1", "factor", "factorAux1", "compuesto", 
                   "compuestoAux1", "compuestoAux2", "asignacion", "asignacionAux1", 
                   "condicion", "condicionAux1", "bloque", "bloqueAux1", 
                   "ciclo", "escritura", "escrituraAux1", "lectura", "c_class", 
                   "classAux1", "classAux2", "classAux3", "atrib", "atribAux1", 
                   "atribAux2", "atribAux3", "metod", "metodAux1", "metodAux2", 
                   "metodAux3" ]

    EOF = Token.EOF
    CTENTERO=1
    CTEDECIMAL=2
    CTETEXTO=3
    INICIO=4
    SI=5
    SINO=6
    MIENTRAS=7
    LEER=8
    IMPRIMIR=9
    FUNCION=10
    ENTERO=11
    DECIMAL=12
    TEXTO=13
    RETORNAR=14
    LISTA=15
    CLASE=16
    ATRIBUTOS=17
    METODOS=18
    HEREDA=19
    NADA=20
    PRIVADO=21
    PUBLICO=22
    Y=23
    REFERENCIA=24
    O=25
    IDENTICO=26
    IGUAL=27
    COMA=28
    SUMA=29
    RESTA=30
    DIVISION=31
    MULTIPLICACION=32
    DIFERENTE=33
    MAYORIGUAL=34
    MENORIGUAL=35
    MENOR=36
    MAYOR=37
    PARENTESIS1=38
    PARENTESIS2=39
    LLAVE1=40
    LLAVE2=41
    CORCHETE1=42
    CORCHETE2=43
    PUNTOYCOMA=44
    DOSPUNTOS=45
    PUNTO=46
    ID=47
    WS=48

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programaAux1(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux1Context,0)


        def programaAux3(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux3Context,0)


        def FUNCION(self):
            return self.getToken(misterParser.FUNCION, 0)

        def ENTERO(self):
            return self.getToken(misterParser.ENTERO, 0)

        def INICIO(self):
            return self.getToken(misterParser.INICIO, 0)

        def func(self):
            return self.getTypedRuleContext(misterParser.FuncContext,0)


        def EOF(self):
            return self.getToken(misterParser.EOF, 0)

        def getRuleIndex(self):
            return misterParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = misterParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.programaAux1()
            self.state = 131
            self.programaAux3()
            self.state = 132
            self.match(misterParser.FUNCION)
            self.state = 133
            self.match(misterParser.ENTERO)
            self.state = 134
            self.match(misterParser.INICIO)
            self.state = 135
            self.func()
            self.state = 136
            self.match(misterParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaAux1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def v_vars(self):
            return self.getTypedRuleContext(misterParser.V_varsContext,0)


        def programaAux1(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux1Context,0)


        def c_class(self):
            return self.getTypedRuleContext(misterParser.C_classContext,0)


        def getRuleIndex(self):
            return misterParser.RULE_programaAux1

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterProgramaAux1(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitProgramaAux1(self)




    def programaAux1(self):

        localctx = misterParser.ProgramaAux1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programaAux1)
        try:
            self.state = 145
            token = self._input.LA(1)
            if token in [misterParser.ENTERO, misterParser.DECIMAL, misterParser.TEXTO, misterParser.LISTA, misterParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.v_vars()
                self.state = 139
                self.programaAux1()

            elif token in [misterParser.CLASE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.c_class()
                self.state = 142
                self.programaAux1()

            elif token in [misterParser.FUNCION]:
                self.enterOuterAlt(localctx, 3)


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaAux3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCION(self):
            return self.getToken(misterParser.FUNCION, 0)

        def programaAux4(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux4Context,0)


        def ID(self):
            return self.getToken(misterParser.ID, 0)

        def func(self):
            return self.getTypedRuleContext(misterParser.FuncContext,0)


        def programaAux3(self):
            return self.getTypedRuleContext(misterParser.ProgramaAux3Context,0)


        def getRuleIndex(self):
            return misterParser.RULE_programaAux3

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterProgramaAux3(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitProgramaAux3(self)




    def programaAux3(self):

        localctx = misterParser.ProgramaAux3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programaAux3)
        try:
            self.state = 154
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.match(misterParser.FUNCION)
                self.state = 148
                self.programaAux4()
                self.state = 149
                self.match(misterParser.ID)
                self.state = 150
                self.func()
                self.state = 151
                self.programaAux3()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramaAux4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(misterParser.TipoContext,0)


        def NADA(self):
            return self.getToken(misterParser.NADA, 0)

        def getRuleIndex(self):
            return misterParser.RULE_programaAux4

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterProgramaAux4(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitProgramaAux4(self)




    def programaAux4(self):

        localctx = misterParser.ProgramaAux4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_programaAux4)
        try:
            self.state = 158
            token = self._input.LA(1)
            if token in [misterParser.ENTERO, misterParser.DECIMAL, misterParser.TEXTO]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.tipo()

            elif token in [misterParser.NADA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.match(misterParser.NADA)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class V_varsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varsAux1(self):
            return self.getTypedRuleContext(misterParser.VarsAux1Context,0)


        def varsAux4(self):
            return self.getTypedRuleContext(misterParser.VarsAux4Context,0)


        def PUNTOYCOMA(self):
            return self.getToken(misterParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return misterParser.RULE_v_vars

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterV_vars(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitV_vars(self)




    def v_vars(self):

        localctx = misterParser.V_varsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_v_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.varsAux1()
            self.state = 161
            self.varsAux4()
            self.state = 162
            self.match(misterParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarsAux1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(misterParser.ID, 0)

        def tipo(self):
            return self.getTypedRuleContext(misterParser.TipoContext,0)


        def l_list(self):
            return self.getTypedRuleContext(misterParser.L_listContext,0)


        def getRuleIndex(self):
            return misterParser.RULE_varsAux1

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterVarsAux1(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitVarsAux1(self)




    def varsAux1(self):

        localctx = misterParser.VarsAux1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varsAux1)
        try:
            self.state = 167
            token = self._input.LA(1)
            if token in [misterParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.match(misterParser.ID)

            elif token in [misterParser.ENTERO, misterParser.DECIMAL, misterParser.TEXTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.tipo()

            elif token in [misterParser.LISTA]:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.l_list()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarsAux2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IGUAL(self):
            return self.getToken(misterParser.IGUAL, 0)

        def varsAux3(self):
            return self.getTypedRuleContext(misterParser.VarsAux3Context,0)


        def getRuleIndex(self):
            return misterParser.RULE_varsAux2

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterVarsAux2(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitVarsAux2(self)




    def varsAux2(self):

        localctx = misterParser.VarsAux2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_varsAux2)
        try:
            self.state = 172
            token = self._input.LA(1)
            if token in [misterParser.IGUAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.match(misterParser.IGUAL)
                self.state = 170
                self.varsAux3()

            elif token in [misterParser.COMA, misterParser.PUNTOYCOMA]:
                self.enterOuterAlt(localctx, 2)


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarsAux3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(misterParser.ExpresionContext,0)


        def cteL(self):
            return self.getTypedRuleContext(misterParser.CteLContext,0)


        def getRuleIndex(self):
            return misterParser.RULE_varsAux3

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterVarsAux3(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitVarsAux3(self)




    def varsAux3(self):

        localctx = misterParser.VarsAux3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varsAux3)
        try:
            self.state = 176
            token = self._input.LA(1)
            if token in [misterParser.CTENTERO, misterParser.CTEDECIMAL, misterParser.CTETEXTO, misterParser.SUMA, misterParser.RESTA, misterParser.PARENTESIS1, misterParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.expresion()

            elif token in [misterParser.CORCHETE1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.cteL()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarsAux4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(misterParser.ID, 0)

        def varsAux2(self):
            return self.getTypedRuleContext(misterParser.VarsAux2Context,0)


        def varsAux5(self):
            return self.getTypedRuleContext(misterParser.VarsAux5Context,0)


        def getRuleIndex(self):
            return misterParser.RULE_varsAux4

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterVarsAux4(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitVarsAux4(self)




    def varsAux4(self):

        localctx = misterParser.VarsAux4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varsAux4)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(misterParser.ID)
            self.state = 179
            self.varsAux2()
            self.state = 180
            self.varsAux5()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarsAux5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(misterParser.COMA, 0)

        def ID(self):
            return self.getToken(misterParser.ID, 0)

        def varsAux2(self):
            return self.getTypedRuleContext(misterParser.VarsAux2Context,0)


        def varsAux5(self):
            return self.getTypedRuleContext(misterParser.VarsAux5Context,0)


        def getRuleIndex(self):
            return misterParser.RULE_varsAux5

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterVarsAux5(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitVarsAux5(self)




    def varsAux5(self):

        localctx = misterParser.VarsAux5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_varsAux5)
        try:
            self.state = 188
            token = self._input.LA(1)
            if token in [misterParser.COMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(misterParser.COMA)
                self.state = 183
                self.match(misterParser.ID)
                self.state = 184
                self.varsAux2()
                self.state = 185
                self.varsAux5()

            elif token in [misterParser.PUNTOYCOMA]:
                self.enterOuterAlt(localctx, 2)


            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TipoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTERO(self):
            return self.getToken(misterParser.ENTERO, 0)

        def DECIMAL(self):
            return self.getToken(misterParser.DECIMAL, 0)

        def TEXTO(self):
            return self.getToken(misterParser.TEXTO, 0)

        def getRuleIndex(self):
            return misterParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = misterParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << misterParser.ENTERO) | (1 << misterParser.DECIMAL) | (1 << misterParser.TEXTO))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class L_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LISTA(self):
            return self.getToken(misterParser.LISTA, 0)

        def tipo(self):
            return self.getTypedRuleContext(misterParser.TipoContext,0)


        def CTENTERO(self):
            return self.getToken(misterParser.CTENTERO, 0)

        def getRuleIndex(self):
            return misterParser.RULE_l_list

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterL_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitL_list(self)




    def l_list(self):

        localctx = misterParser.L_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_l_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(misterParser.LISTA)
            self.state = 193
            self.tipo()
            self.state = 194
            self.match(misterParser.CTENTERO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CteLContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CORCHETE1(self):
            return self.getToken(misterParser.CORCHETE1, 0)

        def valor(self):
            return self.getTypedRuleContext(misterParser.ValorContext,0)


        def cteLAux1(self):
            return self.getTypedRuleContext(misterParser.CteLAux1Context,0)


        def CORCHETE2(self):
            return self.getToken(misterParser.CORCHETE2, 0)

        def getRuleIndex(self):
            return misterParser.RULE_cteL

        def enterRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.enterCteL(self)

        def exitRule(self, listener:ParseTreeListener):
            if isinstance( listener, misterListener ):
                listener.exitCteL(self)




    def cteL(self):

        localctx = misterParser.CteLContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cteL)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(misterParser.CORCHETE1)
            self.state = 197
            self.valor()
            self.state = 198
            self.cteLAux1()
            self.state = 199
            self.match(misterParser.CORCHETE2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CteLAux1Context(ParserRuleContext):
